# numeric_ranges

./: CMakeLists.txt  README.md
include/: numeric_ranges.hpp
test/: CMakeLists.txt  accumulate.cpp  adjacent_difference.cpp  inner_product.cpp  iota.cpp  partial_sum.cpp  test_iterators.hpp
